--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".DevControlActivity"></activity>
+
+        <activity android:name=".ChecklistActivity"/>
+        <activity android:name=".DevControlActivity" />
         <activity android:name=".DepthControlActivity" />
         <activity android:name=".ControlActivity" />
         <activity android:name=".SplashActivity">
