--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,8 @@ captures/
 .cxx/
 
 # Google Services (e.g. APIs or Firebase)
+app/google-services.json
 # google-services.json
-
 # Freeline
 freeline.py
 freeline/
